# genie-flow-invoker-ollama

./: .gitignore  pyproject.toml
src/genie_flow_invoker/invoker/: ollama.py
