[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
genie_flow_invoker = "src/genie_flow_invoker"

[project]
name = "genie_flow_invoker_ollama"
authors = [
    { name = "Willem van Asperen", email = "willem.van.asperen@paconsulting.com"}
]
description = "Genie Flow Invoker Ollama"
readme = "README.md"
requires-python = "~=3.11.0"
classifiers=[
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
dependencies=[
    "loguru~=0.7",
    "genie-flow-invoker~=0.7.0",
    "ollama~=0.4",
    "PyYAML~=6.0",
    "backoff~=2.2"
]
dynamic = ["version"]
